app/styles/about.scss
// mixins
@mixin vendor-prefix($property, $argument) {
  #{$property}: $argument;
  -webkit-#{$property}: $argument;
  -moz-#{$property}: $argument;
  -ms-#{$property}: $argument;
  -o-#{$property}: $argument;
}

// HTML5 tags
header, section, footer, aside, nav, article, figure { display: block; }

// Initial setiings
html { height: 100%; }
body {
  min-width: 1016px; width:100%; height:100%; margin: 0px;
  font-family: 'Philosopher', sans-serif;
  background-color: #111; overflow:hidden;
}
b { font-weight: 700; }
a { text-decoration: none; }
del { text-decoration: line-through; }
i { font-style: italic; }

ul { list-style: none; margin:auto; }
ol { padding:0; }

#hor_frame {
  position: relative;
  width: 100%; max-height: 760px; min-height: 516px; margin: 0 auto;
  border-top: 1px solid #282828; border-bottom: 1px solid #282828;
  /*box-shadow: 0px 2px 6px 1px rgba(64,64,64,0.95);*/
  background-size: cover; overflow:hidden; z-index: 0;
}
#dim_block{
  position: absolute; width: 102%; height:100%;
  background-color: #111; opacity: 0.7; z-index: -1; overflow: hidden;
}
#bg_frame {
  position: relative; max-width: 1810px; height: 100%; margin: 0 auto;
  background-size: cover; background-repeat: no-repeat;
  box-shadow: 0 0 15px 5px rgba(0,0,0,0.95); z-index: 1;
  -webkit-transform: translateZ(0); /* Chrome GPU HACK */
}

// global stylings
.fn_buttons {
  display: inline; cursor: pointer; opacity: 0.75;
  background-color: #aaa; border: 1px solid #888; border-radius: 1px;
  @include vendor-prefix(transition, opacity 300ms ease);
  &:hover { opacity: 1; }
}

.hidden { opacity: 0; height: 0;}

// header and footer
#menu_header, #page_footer  {
  position: absolute; display: block; height: 20px; margin: 0;
  color: #fff; background-color: #000; opacity: 0.88;
  z-index: 3;
}
#menu_header {
 top: 0;
	h1 {
		float:left; z-index: 1;
		width: 190px; padding-left: 2px; margin: 0;
		font-size: 16px; text-align: left;
	}
	ul li {
		display: inline; opacity: 0.5;
		a { color: #fff; }
	}
}
#menu_header nav ul {
	display: block; text-align: center;
	li { margin:0 0 0 30px; @include vendor-prefix(transition, opacity 300ms ease); }
	li.active, li:hover { opacity: 1 }
}
#menu_header .social_list {
  float: right; text-align: right; width: 190px;
  li { margin: 0 5px 0 0; @include vendor-prefix(transition, opacity 300ms ease); }
  li:hover { opacity: 1; };
}

#page_footer { left: 0; bottom: 0; }
#page_footer span {
	font-size: 14px; padding-top: 2px;
	a { color: #fff; }
}
.bg_info { float: right; /*text-shadow: 2px 2px 2px #aaa;*/ margin-right: 3px;}
.powered {
	float: left; padding-left: 2px;
	a { text-decoration: underline; opacity: 0.5; &:hover{ opacity: 1.0; } }
}
#copyright_footer {
  display: block; position: relative; padding-top: 6px; text-align: center;
  color: #fff; font-size: 15px;
}


#main_frame {
	overflow: auto; width: 100%; height: 100%;
	padding: 20px 360px 36px 0; /*Right padding as Hide scroll HACK*/
}

// general settings
article header {
  background-color: #333; color: #ddd; font-weight: 700;
  margin: 8px 0 0 -16px; padding-left: 6px; border-radius: 1px;
}

.area {
  display: inline-block; position: relative; overflow: hidden;
  background-color: #eee; margin: 16px 0 0 16px; border-radius: 1px;
  opacity: 0.97; box-shadow: 3px 3px 10px 3px rgba(70,70,70,0.8);
}
.area a, .area a:visited { color: #000;} .area a:hover { text-decoration: underline; }
.area ol li { list-style:none; margin: 4px 16px; }

// home(about)
#about_profile {
  float: left;
  article div { margin: 2px 0 1px 5px; }
  img { position: absolute; clip: rect(0,185px,310px,0); border-radius: 1px; }
  .dummy_img { width: 185px; height: 310px; margin-top: 6px;}
}
#about_text {
  float: left; width: 640px;
  article div { margin: 2px 0 1px 5px; }
}

// vitae
#vitae { display:block; width: 800px; margin: 16px auto 0;}
#vitae .vitae_fn { float: right; margin-left: 5px; }
#vitae .vitae_fn a{ text-decoration: none; }
#vitae article div { margin: 5px 0 4px 5px; }
#vitae article .date{ float:right; margin-top: 0;}
/*#vitae article .vitae_exp{ padding-left: 32px; margin: 0 0 4px;}*/
#vitae li.vitae_exp {list-style-type: square; margin: 4px 0 2px 0;}

// portfolio
#portfolio_tags_cloud {
	float:left; width: 160px;
	.portfolio_tags { margin: 6px 0 12px; cursor: pointer;}
}
#portfolio_tag_fns li{ margin: 8px 0; }

.portfolio {
	float: left; width: 160px; min-height: 210px; max-height:210px; margin: 16px 0 0 16px;
	ol { margin: 2px 0 6px 10px; width:140px; }
	.portfolio_thumb_img { margin: 8px 0 0 8px; width: 144px; height: 144px; }
	.portfolio_status {
		position: absolute; right: 8px; top: 128px; height: 18px; z-index: 2;
		font-size: 16px; font-weight: 700; color: #bbb; background-color: #333;
		padding: 2px 4px; border: 1px solid #666;
	}
	.portfolio_title {
		position: absolute; left: 8px; top: 8px; width: 144px; height: 144px;
		background-color: #000; color: #fff; opacity: 0.88;
	}
}

.portfolio_fn {
	background-color: #aaa; border-radius: 1px; opacity: 0.8; cursor: pointer;
	@include vendor-prefix(transition, opacity 300ms ease);
}

.portfolio.highlighted {
	width: 248px; ol { width:228px; }
	.portfolio_thumb_img, .portfolio_title { width: 232px; }
}

.portfolio.p_expanded {
	width: 600px; max-height:800px; ol { margin: 2px 0 12px 12px; width:500px;}
	.portfolio_content { display: block;}
	.portfolio_thumb_img, .portfolio_title, .portfolio_status { display: none;}
}

.portfolio .portfolio_title{
	@include vendor-prefix(transition, opacity 300ms ease);
	h2 { margin: 3px; font-size: 16px;}
	&:hover { opacity: 0; }
}

.portfolio .portfolio_tags { width: 140px; margin: 0 0 0 10px; }
.portfolio .portfolio_tags li, #portfolio_tags_cloud .portfolio_tags li {
  display: inline; background-color: #ccc; border: 1px solid #aaa; border-radius: 2px;
  margin: 0; line-height: 24px; opacity: 0.5; cursor: pointer;
  @include vendor-prefix(transition, opacity 300ms ease);
}
.portfolio .portfolio_fn { position: absolute; right: 16px; top: 16px; }

.portfolio .portfolio_tags li:hover, .portfolio_fn:hover, #portfolio_tags_cloud .portfolio_tags li:hover{ opacity: 1; }
.portfolio .portfolio_tags li.checked, #portfolio_tags_cloud .portfolio_tags li.checked{ opacity: 1; border: 1px solid #555;}
.portfolio .portfolio_tags li.checked:hover, #portfolio_tags_cloud .portfolio_tags li.checked:hover{ opacity: 0.8;}

.portfolio .portfolio_content {
	display: none; margin: 16px 16px 8px;
	article h2 {font-size: 14px; font-weight: 500;}
	.portfolio_content_img {
  	margin: 8px 0 8px 0; padding: 0;
  	background-size: cover; background-repeat: no-repeat;
  	width: 100%; height: 236px; border: 1px solid #aaa; border-radius: 1px;
	}
	.portfolio_exp {
		color: #fff; background-color: #333; margin: 16px -16px 0 0; padding: 6px; opacity: 0.98; float:right;
		h2 { margin: 0; }
		a { color: #fff; }
	}
	.content_thumb_img { text-decoration: none; }
}

/* pop image*/
#pop_img {
  position:absolute; display:none; z-index: 2; top:0; left:0;
  img { height: 400px;  border: 3px solid #eee; border-radius: 1px; }
}

/* misc */
#misc { float:right; }
#misc_fns li { margin: 8px 16px;}
#misc article div { margin: 3px 0 6px 5px; }

